2008-12-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

        Bug 564066 – Crash in gtk_rc_parse_default_files

        * gtk/gtkrc.c (gtk_rc_parse_default_files): Handle being called
        early. Bug report by Andrés G. Aragoneses

2008-12-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

        * gtk/gtkmountoperation.c: Set an empty title on password dialogs.
        Pointed out by Máirín Duffy.

2008-12-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

        Bug 560135 - Print when the user double clicks a printer

        * gtk/gtkprintunixdialog.c: add handling of double click to
        GtkPrintUnixDialog. Patch by Marek Kasik

2008-12-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 563991 – gtk_file_chooser_button_new_with_backend is deprecated 
	-- but what should be used instead?

	* gtk/gtkfilechooserbutton.c: Enhanced deprecation annotation.
	
2008-12-07  Behdad Esfahbod  <behdad@gnome.org>

	Bug 563547 – Update gdkx11 atom precache table

	* gdk/x11/gdkdisplay-x11.c: Add more atoms to precache.

2008-12-04  Simos Xenitellis  <simos@gnome.org>

	Bug 557420#c23:

	* gtk/gtkimcontextsimple.c: Fixed the lower bound for dead keys
	to dead_grave (instead of dead_stroke).

2008-12-01  Matthias Clasen <mclasen@redhat.com>

	Merged from trunk:

	Bug 555334 – connected server feature

	* gtk/gtkfilesystem.c (get_volumes_list): Filter out shadow mounts.
	Patch by David Zeuthen.

2008-11-29  Federico Mena Quintero  <federico@novell.com>

	Merged from trunk:

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): If tree lines are
	enabled, flip them around for the right-to-left case.  Fixes
	https://bugzilla.novell.com/show_bug.cgi?id=447004.  Patch by
	Ricardo Cruz <rpmcruz@alunos.dcc.fc.up.pt>

2008-11-27  Simos Xenitellis  <simos@gnome.org>

	Bug 557420 – Some compose sequences don't work anymore (or only in 
	a specific order)
	
	* gtk/gtkimcontextsimple.c: Update of table size, keysym boundary,